<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@android:drawable/ic_menu_manage" android:id="@id/settings_menu_item" android:title="@string/settings_menu_label" />
    <item android:icon="@android:drawable/ic_menu_send" android:id="@id/bugreport_menu_item" android:title="@string/bugreport_menu_label" />
    <item android:icon="@android:drawable/btn_star_big_off" android:id="@id/starcomment_menu_item" android:title="@string/starcomment_menu_label" />
    <item android:icon="@android:drawable/ic_menu_info_details" android:id="@id/about_menu_item" android:title="@string/about_menu_label" />
    <item android:icon="@android:drawable/ic_menu_close_clear_cancel" android:id="@id/exit_menu_item" android:title="@string/exit_menu_label" />
</menu>