<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:myapp="http://schemas.android.com/apk/res/ru.atrant.shake2playnext"
  xmlns:qwad="http://schemas.android.com/apk/res/ru.atrant.shake2playnext">
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="12.0dip" android:textStyle="bold" android:id="@id/click_ad_textview" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/click_ad_text" />
        <com.admob.android.ads.AdView android:id="@id/adMob" android:layout_width="fill_parent" android:layout_height="wrap_content" qwad:backgroundColor="#ff000000" qwad:primaryTextColor="#ffffffff" qwad:secondaryTextColor="#ffcccccc" />
        <com.qwapi.adclient.android.view.QWAdView android:id="@id/QWAd" android:layout_width="fill_parent" android:layout_height="wrap_content" qwad:placement="bottom" qwad:mediaType="banner" qwad:displayMode="autoRotate" qwad:adInterval="30" qwad:animation="fade" qwad:siteId="Shake2PlayNext-g9ooaf4c" qwad:publisherId="c9a50d7c6c6544daa45258aa47590132" qwad:testMode="false" qwad:renderAdOnCreate="true" />
    </LinearLayout>
    <ScrollView android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@id/log_scrollview1" android:paddingTop="5.0dip" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ToggleButton android:layout_gravity="center_horizontal" android:id="@id/enable_service_togglebutton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/togglebutton_on_label" android:textOff="@string/togglebutton_off_label" android:text="@id/ToggleButton01" />
            <TextView android:textStyle="bold" android:gravity="center_horizontal" android:id="@id/TextView02" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sensitivity_label_text" />
            <FrameLayout android:id="@id/FrameLayout01" android:paddingBottom="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <SeekBar android:id="@id/sensitivity_seek_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="30" android:progress="10" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textStyle="bold" android:textColor="#ffff0000" android:id="@id/TextView02" android:paddingLeft="2.0dip" android:paddingTop="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sensitivity_high_label_text" android:layout_weight="1.0" />
                    <TextView android:textStyle="bold" android:textColor="#ff00ff00" android:gravity="right" android:id="@id/TextView02" android:paddingTop="3.0dip" android:paddingRight="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sensitivity_low_label_text" android:layout_weight="1.0" />
                </LinearLayout>
            </FrameLayout>
            <Button android:id="@id/test_accel_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/test_accel_button_text" />
            <Button android:id="@id/test_music" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="TEST MUSIC" />
            <TextView android:textSize="12.0dip" android:gravity="center_horizontal" android:id="@id/TextView012" android:paddingTop="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/read_about_label_text" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>