<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@id/log_scrollview1" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="10.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:id="@id/version_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/version_info" />
        <TextView android:autoLink="email" android:id="@id/about_text" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_text" />
        <Button android:id="@id/other_apps_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/other_apps_button" />
    </LinearLayout>
</ScrollView>